# mcp-occupation-classifier

./: .dockerignore  .env.example  CHECKLIST.md  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/: QUICKSTART.md  USAGE.md  config.yaml  scraper.py
.github/adk-docs/: index.html  llms-full.txt  llms.txt
.github/adk-docs/a2a/: index.html
.github/adk-docs/agents/: index.html
.github/adk-docs/api-reference/: index.html
.github/adk-docs/apps/: index.html
.github/adk-docs/artifacts/: index.html
.github/adk-docs/callbacks/: index.html
.github/adk-samples-python-agents/: index.html
.github/checklists/: 2025-12-27-CHECKLIST.md  2025-12-27-PLAN.md  2025-12-27-microservices-refactor.md
.github/fastmcp-docs/: changelog.html  index.html  llms-full.txt  llms.txt  updates.html
.github/mcp-docs/: best-practices.html  concepts.html  examples.html  faqs.html  index.html  introduction.html  quickstart.html  sdk.html  tutorials.html
.github/mcp-official-docs/: index.html  sdk.html
.github/microsoft-copilot-studio-mcp/: index.html
.github/workflows/: scrape-docs.yml
data/processed/: income_stats.json  ssyk_data.parquet
data/raw/: the-ssyk-hierarchy-with-occupations.json
deploy/: cloudrun.md
docs/: copilot-studio.md
pipelines/: config.py  ingest_all.py  pyproject.toml
scripts/: mcp_smoke_test.py
services/adk_agent/: Dockerfile  pyproject.toml
services/adk_agent/src/: sitecustomize.py
services/adk_agent/src/ssyk_advisor/: agent.py
services/mcp_server/: Dockerfile  pyproject.toml
services/mcp_server/src/ssyk_mcp/: auth.py  config.py  ingestion.py  scb_api.py  search.py  server.py
(+361 files in other folders)
