[project]
name = "mcp-occupation-classifier"
version = "0.1.0"
description = "MCP server for Swedish occupation classification and income statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "rank_bm25",
    "httpx",
    "python-dotenv",
    "openai",
    "pyarrow",
    "fastparquet"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Workspace-level dependency project (no packaged module at repo root).
packages = []
